# dbof

./: CMakeLists.txt  LICENSE
include/dbof/: dbof.h  dbof.hpp  file.h  stream.hpp
src/: dbof.c
